--- a/index.html
+++ b/index.html
@@ -136,16 +136,18 @@
                 <a href="https://twitter.com/adepricillia">|| Twitter</a>
             </strong>
             <br/><br/>
-            <label for="name">Your Name : </label>
-            <input type="text" name="name" id="name" required/>
-            <br/><br/>
-            <label for="email">Your Email : </label>
-            <input type="text" name="email" id="email" required/>
-            <br/><br/>
-            <label for="message">Your Message : </label>
-            <textarea id="jawaban" name="jawaban" rows="10" cols="60" placeholder="Type Your Message..."></textarea>
-            <br/><br/>
-            <input type="submit" name="submit">
+            <form>
+                <label for="name">Your Name : </label>
+                <input type="text" name="name" id="name" required/>
+                <br/><br/>
+                <label for="email">Your Email : </label>
+                <input type="text" name="email" id="email" required/>
+                <br/><br/>
+                <label for="message">Your Message : </label>
+                <textarea id="jawaban" name="jawaban" rows="10" cols="60" placeholder="Type Your Message..."></textarea>
+                <br/><br/>
+                <input type="submit" name="submit">
+            </form>
     </section>
     
 </body>
