--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyHomePage - Bubaa.</title>
 </head>
-<body>
+<body bgcolor="#D4ECDD">
     <header>
         <h1><b><i><p style="color : #00A19D;">HULLA</p></i></b></h1>
         <hr border:8px/>
@@ -106,11 +106,11 @@
                     <table cellspacing="10">
                         <tr>
                             <td>HTML</td>
-                            <td>85 % ⭐ ⭐ ⭐ ⭐ </td>
+                            <td bgcolor="#79B4B7">85 % ⭐ ⭐ ⭐ ⭐ </td>
                         </tr>
                         <tr>
                             <td>CSS</td>
-                            <td>20 % ⭐ </td>
+                            <td bgcolor="#79B4B7">20 % ⭐ </td>
                         </tr>
                     </table>
                 </td>
@@ -118,7 +118,7 @@
                     <table cellspacing="10">
                         <tr>
                             <td>Java Script</td>
-                            <td>40 % ⭐ ⭐</td>
+                            <td bgcolor="#79B4B7">40 % ⭐ ⭐</td>
                         </tr>
                     </table>
                 </td>
@@ -148,6 +148,7 @@
                 <br/><br/>
                 <input type="submit" name="submit">
             </form>
+            
     </section>
     
 </body>
