--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyHomePage - Bubaa.</title>
+    <style>
+        header h1{
+            text-align: center;
+        }
+        nav{
+            text-align: center;
+        }
+    </style>
 </head>
 <body bgcolor="#D4ECDD">
     <header>
         <h1><b><i><p style="color : #00A19D;">HULLA</p></i></b></h1>
-        <hr border:8px/>
+        <hr border:8px/><hr border:8px/>
     <table cellspacing="20" >
         <tr>
             <td>
-                <img src="photo (1)-modified.png" alt="profileMe" width="450px"/>
+                <img src="photo (1)-modified.png" alt="profileMe" width="400px"/>
             </td>
             <td>
                 <fieldset>
@@ -129,13 +137,11 @@
     <section id="contactMe">
         <hr/>
         <h2><p style="color: #C36839;">CONTACT ME</p></h2>
+            
             <strong>
-                <a href="https://www.instagram.com/adepriciliaa/">Instagram</a>
-            </strong>
-            <strong>
-                <a href="https://twitter.com/adepricillia">|| Twitter</a>
-            </strong>
-            <br/><br/>
+                <a href="https://www.instagram.com/adepriciliaa/"> Instagram  ||</a>
+                <a href="https://twitter.com/adepricillia">  Twitter</a>
+            </strong><br/><br/>
             <form>
                 <label for="name">Your Name : </label>
                 <input type="text" name="name" id="name" required/>
